--- a/cyle/index.html
+++ b/cyle/index.html
@@ -6,11 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="./js/cys2.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/cnchar/cnchar.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/cnchar/cnchar.min.js"></script>
   <title>成语le</title>
   <style>
     body {
       text-align: center;
-      padding-top: 10px;
+      padding: 0;
+    }
+    .container {
+      position: relative;
+      display: inline-block;
+      padding: 2px;
+      padding-top: 36px;
+      max-width: 800px;
+      margin: auto;
+      height: calc(100vh - 48px);
     }
     #root.default {
       --background: #ffffff;
@@ -90,18 +100,29 @@
     }
     #fk,
     #cyid,
-    #fx {
+    #fx,
+    #help-icon,
+    #close-help {
       position: absolute;
       display: inline-block;
       width: 80px;
-      top: 0;
+      top: 2px;
       margin: auto;
+      cursor: pointer;
     }
     #fk {
       left: 0;
     }
     #cyid {
       /* left: 0; */
+      right: 0;
+    }
+    #help-icon {
+      left: 0;
+      right: 0;
+    }
+    #close-help {
+      width: 60px;
       right: 0;
     }
     #fx {
@@ -111,9 +132,50 @@
       position: absolute;
       top: -100px;
     }
+    #help {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      padding: 4px;
+      overflow: auto;
+      margin: auto;
+      box-shadow: 2px 2px 5px 2px;
+      width: 90%;
+      height: 90%;
+      text-align: center;
+      background: #ffffff;
+      border-radius: 4px;
+    }
+    .img {
+      width: 100%;
+    }
+    #help p {
+      text-align: left;
+    }
+    /* 设置滚动条的样式 */
+    ::-webkit-scrollbar {
+      width:8px;
+    }
+    /* 滚动槽 */
+    ::-webkit-scrollbar-track {
+      -webkit-box-shadow:inset006pxrgba(0,0,0,0.3);
+      border-radius:8px;
+    }
+    /* 滚动条滑块 */
+    ::-webkit-scrollbar-thumb {
+      border-radius:8px;
+      background:rgba(0,0,0,0.1);
+      -webkit-box-shadow:inset006pxrgba(0,0,0,0.5);
+    }
+    /* ::-webkit-scrollbar-thumb:window-inactive {
+      background:rgba(255,0,0,0.4);
+    } */
   </style>
 </head>
 <body>
+  <div class="container">
   <div class="box" id="root">
     <div class="chengyu" id="c">
       <div class="zi z1">天</div>
@@ -163,6 +225,19 @@
     <div id="cyid" onclick="setId()"></div>
     <!-- <div id="fx" onclick="share()">分享</div> -->
     <div id="fk" onclick="feedback()">反馈</div>
+    <div id="help-icon" onclick="openHelp()">❓</div>
+    <div id="help" style="display: none;">
+      <div id="close-help" onclick="closeHelp()">关闭</div>
+      <div>
+        <h2>盲猜成语游戏规则</h2>
+<p>1. 猜的必须为成语，猜一次点击“提交”，系统自动存档，非成语会提示“请输入正确的成语”且该次不存档</p>
+<p>2. 如果正确输入成语，系统却提示“请输入正确的成语”，请点击左上角“反馈”，成语库需要大家的支持完善～</p>
+<p>3. 右上角数字代码点击后可以重新生成当前关卡，适合分享给小伙伴一起玩😊</p>
+<p>4. 每次猜成语后，备选区用过的字以及猜的成语中的字会变颜色，具体颜色变化会在下方图片中说明</p>
+      </div>
+      <img class="img" src="img/help2.jpg"/>
+    </div>
+  </div>
   </div>
   <script>
       console.log('你好呀，程序员，可以加我微信一起交流：maqijun123456');
@@ -191,6 +266,19 @@
         cyid_ele.innerHTML = cyid;
         tarCy = cys[cyid];
         document.querySelector('.z1').innerHTML = '';
+      }
+      if (!localStorage.isOld) {
+        openHelp()
+      }
+      function openHelp() {
+        console.log('jopen')
+        var help_ele = document.getElementById('help');
+        help_ele.style.display = 'inline-block'
+      }
+      function closeHelp() {
+        localStorage.isOld = '1'
+        var help_ele = document.getElementById('help');
+        help_ele.style.display = 'none'
       }
       function setId() {
         var specialCyId = prompt('请输入成语id');
